--- a/Health_Insurance_Prediction3_Training3.ipynb
+++ b/Health_Insurance_Prediction3_Training3.ipynb
@@ -32,6 +32,7 @@
         "id": "FQ85H1FdBzwi"
       },
       "source": [
+        "# Import the libraries\r\n",
         "import pandas as pd\r\n",
         "import numpy as np\r\n",
         "import matplotlib.pyplot as plt\r\n",
@@ -46,6 +47,7 @@
         "id": "RY1al90rv_NH"
       },
       "source": [
+        "# Import the training dataset\r\n",
         "df = pd.read_csv('/content/sample_data/train.csv')"
       ],
       "execution_count": null,
@@ -358,6 +360,7 @@
         "outputId": "cc6025d6-f238-47d0-b89a-7de14c47f603"
       },
       "source": [
+        "# Check for null values in the dataset\r\n",
         "df.isnull().sum()"
       ],
       "execution_count": null,
@@ -401,6 +404,7 @@
         "outputId": "a42d2a2f-c403-48a7-aebe-dec19055a030"
       },
       "source": [
+        "# Use seaborn library to check for null values\r\n",
         "sns.heatmap(df.isnull(),yticklabels=False,cbar=True)"
       ],
       "execution_count": null,
@@ -523,7 +527,7 @@
         "id": "N6bC1RSwv_NO"
       },
       "source": [
-        "#rename the column for ease\n",
+        "# rename the column for ease\n",
         "df.rename(columns = {'Health Indicator':'Health_Indicator'}, inplace = True) "
       ],
       "execution_count": null,
@@ -539,7 +543,7 @@
         "outputId": "75cca381-d6d9-4119-f429-f4c849edb408"
       },
       "source": [
-        "#count the distinct values in categorical column\n",
+        "# count the distinct values in categorical column\n",
         "print(df.City_Code.unique())\n",
         "print(df.Accomodation_Type.unique())\n",
         "print(df.Reco_Insurance_Type.unique())\n",
@@ -572,7 +576,7 @@
         "id": "H5Gg21aFv_NQ"
       },
       "source": [
-        "#Handle missing categorical data using Mode\n",
+        "# Handle missing categorical data using Mode\n",
         "df['Health_Indicator'] = df['Health_Indicator'].fillna(df['Health_Indicator'].mode()[0])\n",
         "df['Holding_Policy_Duration'] = df['Holding_Policy_Duration'].fillna(df['Holding_Policy_Duration'].mode()[0])"
       ],
@@ -590,7 +594,7 @@
         "outputId": "7f580991-0e49-4bc5-b0fa-a4709d86c7f2"
       },
       "source": [
-        "#Finding outliers in the dataset\n",
+        "# Finding outliers in the dataset\n",
         "sns.boxplot(x=df['Holding_Policy_Type'])"
       ],
       "execution_count": null,
@@ -628,7 +632,7 @@
         "id": "O49BD5_mv_NR"
       },
       "source": [
-        "#No outliers , so replace it with mean\n",
+        "# No outliers , so replace it with mean\n",
         "df['Holding_Policy_Type']= df['Holding_Policy_Type'].fillna(df['Holding_Policy_Type'].mean())"
       ],
       "execution_count": null,
@@ -885,7 +889,7 @@
         "id": "JGkmluBMv_NU"
       },
       "source": [
-        "#convert from categorical data to one hot encoded data\n",
+        "# convert from categorical data to label encoded data\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "le = LabelEncoder()\n",
         "#df['City_Code'] = le.fit_transform(df['City_Code'])\n",
@@ -904,6 +908,7 @@
         "id": "TirfAxGHv_NV"
       },
       "source": [
+        "# drop the unnecessary columns\n",
         "df.drop(['City_Code'],axis = 1,inplace = True)\n",
         "df.drop(['ID'],axis = 1,inplace = True)\n",
         "df.drop(['Region_Code'],axis = 1,inplace = True)"
@@ -950,6 +955,7 @@
         "outputId": "32a245e5-6968-471d-f1f8-fdd152373510"
       },
       "source": [
+        "# Create independent and dependent variables\n",
         "X = df.iloc[:,:-1]\n",
         "y = df.iloc[:,-1]\n",
         "X.head()"
@@ -1173,6 +1179,7 @@
         "id": "l0rwsXRYv_NY"
       },
       "source": [
+        "# One hot encode the remaining categorical column\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
         "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [5])], remainder='passthrough')\n",
@@ -1400,6 +1407,7 @@
         "id": "vSlcGR1mv_Na"
       },
       "source": [
+        "# One hot encoding\n",
         "ct1 = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [14])], remainder='passthrough')\n",
         "X = np.array(ct1.fit_transform(X))"
       ],
@@ -1714,6 +1722,7 @@
         "outputId": "52be88bd-becf-421e-e452-06414be4b357"
       },
       "source": [
+        "# Handling Imbalance in the dataset\n",
         "from imblearn.combine import SMOTETomek\n",
         "from imblearn.under_sampling import NearMiss"
       ],
@@ -1805,6 +1814,7 @@
         "id": "iWUzhKffv_Nd"
       },
       "source": [
+        "# Feature Scaling\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)\n",
@@ -1863,6 +1873,7 @@
         "outputId": "83ab9062-dec7-4773-8d5c-712f49f8d3b6"
       },
       "source": [
+        "# Implementing Random Forest Classifier Algorithm\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "rfc1 = RandomForestClassifier()\n",
         "rfc1.fit(X_train, y_train)"
@@ -1961,6 +1972,7 @@
         "id": "roVz11oov_Ng"
       },
       "source": [
+        "# Implementing XGBOOST Algorithm\n",
         "from sklearn.model_selection import RandomizedSearchCV\n",
         "import xgboost"
       ],
@@ -2181,6 +2193,7 @@
         "id": "QqjDMlVHv_Ng"
       },
       "source": [
+        "# Collecting the test data to be predicted\r\n",
         "test_df=pd.read_csv('/content/sample_data/new_test.csv')"
       ],
       "execution_count": null,
@@ -2220,6 +2233,7 @@
         "id": "U595UoOrv_Nh"
       },
       "source": [
+        "# Performing Feature Scaling on test dataset\r\n",
         "test_df = sc.transform(test_df)"
       ],
       "execution_count": null,
@@ -2270,7 +2284,7 @@
         "id": "Jktjf1UAv_Nj"
       },
       "source": [
-        "##Create Sample Submission file and Submit using ANN\n",
+        "##Create Sample Submission file and Submit using XgBOOST\n",
         "pred=pd.DataFrame(y_pred)\n",
         "sub_df=pd.read_csv('/content/sample_data/sample_submission.csv')\n",
         "datasets=pd.concat([sub_df['ID'],pred],axis=1)\n",
