--- a/Health_Insurance_Prediction3_Testing3.ipynb
+++ b/Health_Insurance_Prediction3_Testing3.ipynb
@@ -32,6 +32,7 @@
         "id": "qUvR5I6awLk4"
       },
       "source": [
+        "# Import the libraries\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -46,6 +47,7 @@
         "id": "NvjkUuC3wLlD"
       },
       "source": [
+        "# Import the test dataset\r\n",
         "df = pd.read_csv('/content/sample_data/test.csv')"
       ],
       "execution_count": null,
@@ -346,6 +348,7 @@
         "outputId": "58e82213-39b1-4a36-c864-e8b523699432"
       },
       "source": [
+        "# Check for null values in test dataset\r\n",
         "df.isnull().sum()"
       ],
       "execution_count": null,
@@ -467,7 +470,7 @@
         "id": "nv3qIJQJwLlL"
       },
       "source": [
-        "#rename the column for ease\n",
+        "# rename the column for ease\n",
         "df.rename(columns = {'Health Indicator':'Health_Indicator'}, inplace = True) "
       ],
       "execution_count": null,
@@ -483,7 +486,7 @@
         "outputId": "0aedd563-a3e5-4701-d176-6e2f1abac008"
       },
       "source": [
-        "#count the distinct values in categorical column\n",
+        "# count the distinct values in categorical column\n",
         "print(df.City_Code.unique())\n",
         "print(df.Accomodation_Type.unique())\n",
         "print(df.Reco_Insurance_Type.unique())\n",
@@ -516,7 +519,7 @@
         "id": "Poh7tzEvwLlN"
       },
       "source": [
-        "#Handle missing categorical data using Mode\n",
+        "# Handle missing categorical data using Mode\n",
         "df['Health_Indicator'] = df['Health_Indicator'].fillna(df['Health_Indicator'].mode()[0])\n",
         "df['Holding_Policy_Duration'] = df['Holding_Policy_Duration'].fillna(df['Holding_Policy_Duration'].mode()[0])"
       ],
@@ -534,7 +537,7 @@
         "outputId": "850b653a-f8fd-46b7-c4e4-489b584837f9"
       },
       "source": [
-        "#Finding outliers in the dataset\n",
+        "# Finding outliers in the dataset\n",
         "sns.boxplot(x=df['Holding_Policy_Type'])"
       ],
       "execution_count": null,
@@ -572,7 +575,7 @@
         "id": "sG_kCIKZwLlP"
       },
       "source": [
-        "#No outliers , so replace it with mean\n",
+        "# No outliers , so replace it with mean\n",
         "df['Holding_Policy_Type']= df['Holding_Policy_Type'].fillna(df['Holding_Policy_Type'].mean())"
       ],
       "execution_count": null,
@@ -822,7 +825,7 @@
         "id": "dsYuRBKmwLlR"
       },
       "source": [
-        "#convert from categorical data to one hot encoded data\n",
+        "# convert from categorical data to label encoded data\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "le = LabelEncoder()\n",
         "#df['City_Code'] = le.fit_transform(df['City_Code'])\n",
@@ -882,6 +885,7 @@
         "id": "RH2SQrADwLlT"
       },
       "source": [
+        "# Perform One Hot Encoding\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
         "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [5])], remainder='passthrough')\n",
@@ -1419,6 +1423,7 @@
         "id": "CiUWkK8uwLlW"
       },
       "source": [
+        "# Store it into .csv file for prediction after Model Building\r\n",
         "X_new.to_csv('/content/sample_data/new_test.csv',index=False)"
       ],
       "execution_count": null,
